save file hash values to db