@@ -1,9 +1,9 @@
 package com.apolloconfig.apollo.ai.qabot.milvus;
 
-import com.google.common.collect.Lists;
 import com.apolloconfig.apollo.ai.qabot.api.VectorDBService;
 import com.apolloconfig.apollo.ai.qabot.config.MilvusConfig;
 import com.apolloconfig.apollo.ai.qabot.markdown.MarkdownSearchResult;
+import com.google.common.collect.Lists;
 import com.theokanning.openai.embedding.Embedding;
 import io.milvus.client.MilvusServiceClient;
 import io.milvus.common.clientenum.ConsistencyLevelEnum;
@@ -32,6 +32,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Random;
 import java.util.stream.Collectors;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
@@ -43,6 +44,7 @@ class MilvusService implements VectorDBService {
 
   private final MilvusServiceClient milvusServiceClient;
   private final MilvusConfig milvusConfig;
+  private final List<Float> dummyEmbeddings = Lists.newArrayList();
 
   public MilvusService(MilvusConfig milvusConfig) {
     this.milvusConfig = milvusConfig;
@@ -160,7 +162,7 @@ class MilvusService implements VectorDBService {
     R<RpcStatus> loadStatus = milvusServiceClient.loadCollection(
         loadCollectionParam);
 
-    List<String> query_output_fields = Arrays.asList("chunk_id");
+    List<String> query_output_fields = List.of("chunk_id");
     QueryParam queryParam = QueryParam.newBuilder()
         .withCollectionName(milvusConfig.getCollection())
         .withConsistencyLevel(ConsistencyLevelEnum.STRONG)
@@ -168,6 +170,10 @@ class MilvusService implements VectorDBService {
         .withOutFields(query_output_fields)
         .build();
     R<QueryResults> respQuery = milvusServiceClient.query(queryParam);
+
+    if (respQuery.getStatus() != Status.Success.getCode()) {
+      throw new RuntimeException("Query failed: " + respQuery.getMessage());
+    }
 
     QueryResultsWrapper wrapperQuery = new QueryResultsWrapper(respQuery.getData());
     List<?> chunkIds = wrapperQuery.getFieldWrapper("chunk_id").getFieldData();
@@ -180,8 +186,116 @@ class MilvusService implements VectorDBService {
         .collect(Collectors.toList());
   }
 
+  @Override
+  public String queryFileHashValue(String fileRoot) {
+    LoadCollectionParam loadCollectionParam = LoadCollectionParam.newBuilder()
+        .withCollectionName(milvusConfig.getFileCollection())
+        .build();
+
+    R<RpcStatus> loadStatus = milvusServiceClient.loadCollection(
+        loadCollectionParam);
+
+    List<String> query_output_fields = List.of("hash_value");
+    QueryParam queryParam = QueryParam.newBuilder()
+        .withCollectionName(milvusConfig.getFileCollection())
+        .withConsistencyLevel(ConsistencyLevelEnum.STRONG)
+        .withExpr(String.format("file_root in ['%s']", fileRoot))
+        .withOutFields(query_output_fields)
+        .build();
+    R<QueryResults> respQuery = milvusServiceClient.query(queryParam);
+
+    if (respQuery.getStatus() != Status.Success.getCode()) {
+      throw new RuntimeException("Query failed: " + respQuery.getMessage());
+    }
+
+    QueryResultsWrapper wrapperQuery = new QueryResultsWrapper(respQuery.getData());
+    List<?> hashValues = wrapperQuery.getFieldWrapper("hash_value").getFieldData();
+
+    if (CollectionUtils.isEmpty(hashValues)) {
+      return null;
+    }
+
+    return hashValues.get(0).toString();
+  }
+
+  @Override
+  public void persistFile(String fileRoot, String hashValue) {
+    List<Long> currentFileIds = queryFileIdByFileRoot(fileRoot);
+
+    List<Field> fields = new ArrayList<>();
+    fields.add(new InsertParam.Field("hash_value", List.of(hashValue)));
+    fields.add(new InsertParam.Field("dummy_embedding", List.of(dummyEmbeddings)));
+    fields.add(new InsertParam.Field("file_root", List.of(fileRoot)));
+
+    InsertParam insertParam = InsertParam.newBuilder()
+        .withCollectionName(milvusConfig.getFileCollection())
+        .withFields(fields)
+        .build();
+    milvusServiceClient.insert(insertParam);
+
+    deleteByFileIdList(currentFileIds);
+
+    FlushParam flushParam = FlushParam.newBuilder()
+        .withCollectionNames(Lists.newArrayList(milvusConfig.getFileCollection()))
+        .build();
+    milvusServiceClient.flush(flushParam);
+  }
+
+  private void deleteByFileIdList(List<Long> fileIds) {
+    if (!fileIds.isEmpty()) {
+      StringBuilder sb = new StringBuilder();
+      sb.append("file_id in [");
+      for (int i = 0; i < fileIds.size(); i++) {
+        sb.append(fileIds.get(i));
+        if (i != fileIds.size() - 1) {
+          sb.append(",");
+        }
+      }
+      sb.append("]");
+      DeleteParam deleteParam = DeleteParam.newBuilder()
+          .withCollectionName(milvusConfig.getFileCollection())
+          .withExpr(sb.toString())
+          .build();
+      milvusServiceClient.delete(deleteParam);
+    }
+  }
+
+  private List<Long> queryFileIdByFileRoot(String fileRoot) {
+    LoadCollectionParam loadCollectionParam = LoadCollectionParam.newBuilder()
+        .withCollectionName(milvusConfig.getFileCollection())
+        .build();
+
+    R<RpcStatus> loadStatus = milvusServiceClient.loadCollection(
+        loadCollectionParam);
+
+    List<String> query_output_fields = List.of("file_id");
+    QueryParam queryParam = QueryParam.newBuilder()
+        .withCollectionName(milvusConfig.getFileCollection())
+        .withConsistencyLevel(ConsistencyLevelEnum.STRONG)
+        .withExpr(String.format("file_root in ['%s']", fileRoot))
+        .withOutFields(query_output_fields)
+        .build();
+    R<QueryResults> respQuery = milvusServiceClient.query(queryParam);
+
+    if (respQuery.getStatus() != Status.Success.getCode()) {
+      throw new RuntimeException("Query failed: " + respQuery.getMessage());
+    }
+
+    QueryResultsWrapper wrapperQuery = new QueryResultsWrapper(respQuery.getData());
+    List<?> fileIds = wrapperQuery.getFieldWrapper("file_id").getFieldData();
+
+    if (CollectionUtils.isEmpty(fileIds)) {
+      return Collections.emptyList();
+    }
+
+    return fileIds.stream().map(id -> Long.parseLong(id.toString()))
+        .collect(Collectors.toList());
+  }
+
+
   private void ensureCollections() {
     ensureChunkCollection();
+    ensureFileCollection();
   }
 
   private void ensureChunkCollection() {
@@ -239,5 +353,64 @@ class MilvusService implements VectorDBService {
 
   }
 
+  private void ensureFileCollection() {
+    // prepare dummy embedding data
+    Random random = new Random();
+    for (int i = 0; i < 1536; i++) {
+      dummyEmbeddings.add(random.nextFloat());
+    }
+
+    HasCollectionParam hasCollectionParam = HasCollectionParam.newBuilder()
+        .withCollectionName(milvusConfig.getFileCollection())
+        .build();
+
+    if (milvusServiceClient.hasCollection(hasCollectionParam).getData()) {
+      return;
+    }
+
+    FieldType fileId = FieldType.newBuilder()
+        .withName("file_id")
+        .withDataType(DataType.Int64)
+        .withPrimaryKey(true)
+        .withAutoID(true)
+        .build();
+    FieldType fileRoot = FieldType.newBuilder()
+        .withName("file_root")
+        .withDataType(DataType.VarChar)
+        .withMaxLength(100)
+        .build();
+    FieldType hashValue = FieldType.newBuilder()
+        .withName("hash_value")
+        .withDataType(DataType.VarChar)
+        .withMaxLength(3000)
+        .build();
+    // not used, just for compatibility
+    FieldType dummyEmbedding = FieldType.newBuilder()
+        .withName("dummy_embedding")
+        .withDataType(DataType.FloatVector)
+        .withDimension(1536)
+        .build();
+    CreateCollectionParam createCollectionReq = CreateCollectionParam.newBuilder()
+        .withCollectionName(milvusConfig.getFileCollection())
+        .withDescription("Files for QA Search")
+        .addFieldType(fileId)
+        .addFieldType(hashValue)
+        .addFieldType(fileRoot)
+        .addFieldType(dummyEmbedding)
+        .build();
+
+    milvusServiceClient.createCollection(createCollectionReq);
+
+    // not used, just for compatibility
+    milvusServiceClient.createIndex(
+        CreateIndexParam.newBuilder()
+            .withCollectionName(milvusConfig.getFileCollection())
+            .withFieldName("dummy_embedding")
+            .withIndexType(IndexType.FLAT)
+            .withMetricType(MetricType.L2)
+            .withSyncMode(Boolean.FALSE)
+            .build()
+    );
+  }
 
 }
